fix: hide overflow-x scroll bar

--- a/client/src/features/chat/components/ChatBox/ChatBox.module.css
+++ b/client/src/features/chat/components/ChatBox/ChatBox.module.css
@@ -35,8 +35,9 @@
 .chatBoxContent {
   display: flex;
   overflow: auto;
+  overflow-x: hidden !important;
   flex-direction: column-reverse;
-  margin: -15px;
+  margin: -14px;
 }
 
 @media screen and (max-width: 768px) {
